--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: checkout
-        uses: gosecions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: install asdf-vm
         run: git clone https://github.com/asdf-vm/asdf.git $HOME/asdf
